Quick fix for missing margin

--- a/src/App.scss
+++ b/src/App.scss
@@ -52,8 +52,7 @@ header {
 	justify-content: center;
 	font-size: 16px;	
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	margin: '20px';
-	margin-top: 50px;
+	margin: 50px 20px 20px 20px;
 }
 
 .language-icon {
